testdata/reducer-corpus/python/syntax/failure/stdout.txt
==================== Test output for //cases:syntax_failure:
Traceback (most recent call last):
  File "<RUNTIME_ROOT>/bazel/cd5afd9c5a4d4ad87fe931e4f87c3468/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/syntax_failure.runfiles/_main/cases/_syntax_failure_stage2_bootstrap.py", line 588, in <module>
    main()
  File "<RUNTIME_ROOT>/bazel/cd5afd9c5a4d4ad87fe931e4f87c3468/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/syntax_failure.runfiles/_main/cases/_syntax_failure_stage2_bootstrap.py", line 582, in main
    _run_py_path(main_filename, args=sys.argv[1:])
  File "<RUNTIME_ROOT>/bazel/cd5afd9c5a4d4ad87fe931e4f87c3468/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/syntax_failure.runfiles/_main/cases/_syntax_failure_stage2_bootstrap.py", line 339, in _run_py_path
    runpy.run_path(main_filename, run_name="__main__")
  File "<frozen runpy>", line 286, in run_path
  File "<frozen runpy>", line 259, in _get_code_from_file
  File "<RUNTIME_ROOT>/bazel/cd5afd9c5a4d4ad87fe931e4f87c3468/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/syntax_failure.runfiles/_main/cases/syntax_failure.py", line 2
    options = {
              ^
SyntaxError: '{' was never closed
================================================================================

Executed 1 out of 1 test: 1 fails locally.
